Intermittent fission GECKO(5067) | Assertion failure: !IsShuttingDown(), at /builds/worker/workspace/build/src/dom/ipc/ContentChild.cpp:1865
Categories
(Core :: DOM: Content Processes, defect, P5)
Tracking
()
People
(Reporter: intermittent-bug-filer, Assigned: mccr8)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disable-recommended])
Attachments
(1 file)
Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=269087908&repo=mozilla-central
Full log: https://queue.taskcluster.net/v1/task/HJMqsZF4THGsJXXigW2EKA/runs/0/artifacts/public/logs/live_backing.log
[task 2019-09-30T17:05:30.030Z] 17:05:30 INFO - TEST-START | netwerk/cookie/test/browser/browser_sharedWorker.js
[task 2019-09-30T17:05:30.071Z] 17:05:30 INFO - GECKO(5067) | ++DOMWINDOW == 1 (0x7fcb308aff20) [pid = 6693] [serial = 1] [outer = (nil)]
[task 2019-09-30T17:05:30.078Z] 17:05:30 INFO - GECKO(5067) | ++DOMWINDOW == 2 (0x7fcb16e17400) [pid = 6693] [serial = 2] [outer = 0x7fcb308aff20]
[task 2019-09-30T17:05:30.160Z] 17:05:30 INFO - GECKO(5067) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpBSrDJu.mozrunner/runtests_leaks_tab_pid6901.log
[task 2019-09-30T17:05:30.221Z] 17:05:30 INFO - GECKO(5067) | --DOCSHELL 0x7fe2e9cb3800 == 0 [pid = 6875] [id = {fb442773-4503-4bd7-8365-c47b81afd5b3}] [url = http://example.com/browser/netwerk/cookie/test/browser/file_empty.html]
[task 2019-09-30T17:05:30.317Z] 17:05:30 INFO - GECKO(5067) | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-09-30T17:05:30.353Z] 17:05:30 INFO - GECKO(5067) | --DOMWINDOW == 2 (0x7fe2e9ce9d40) [pid = 6875] [serial = 1] [outer = (nil)] [url = http://example.com/browser/netwerk/cookie/test/browser/file_empty.html]
[task 2019-09-30T17:05:30.353Z] 17:05:30 INFO - GECKO(5067) | --DOMWINDOW == 1 (0x7fe2e9c57400) [pid = 6875] [serial = 3] [outer = (nil)] [url = http://example.com/browser/netwerk/cookie/test/browser/file_empty.html]
[task 2019-09-30T17:05:30.353Z] 17:05:30 INFO - GECKO(5067) | --DOMWINDOW == 0 (0x7fe2e9b05000) [pid = 6875] [serial = 2] [outer = (nil)] [url = about:blank]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | JavaScript error: resource://gre/modules/ProcessSelector.jsm, line 56: TypeError: process is null
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | [Parent 5067, Main Thread] WARNING: nsIContentProcessProvider failed to return a process: file /builds/worker/workspace/build/src/dom/ipc/ContentParent.cpp, line 897
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | Assertion failure: !IsShuttingDown(), at /builds/worker/workspace/build/src/dom/ipc/ContentChild.cpp:1865
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #01: mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:fd8cde07bc12da00eb110c7ee29edc1f156c76a3c38880b5eb998e6f5a508d631a6ba97e85c721400241c86c5644225bfec5fe45de8b84ef4fe326e48c5521d0/ipc/ipdl/PContentChild.cpp::7953]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #02: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [ipc/glue/MessageChannel.cpp:2186]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #03: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [ipc/glue/MessageChannel.cpp:2112]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #04: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:0]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #05: mozilla::ipc::MessageChannel::MessageTask::Run() [ipc/glue/MessageChannel.cpp:1987]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #06: mozilla::SchedulerGroup::Runnable::Run() [xpcom/threads/SchedulerGroup.cpp:295]
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.793Z] 17:05:33 INFO - GECKO(5067) | #07: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1225]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #08: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:486]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #09: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:0]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #10: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:315]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #11: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #12: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:139]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #13: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:934]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #14: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:238]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO - GECKO(5067) | #15: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:315]
[task 2019-09-30T17:05:33.794Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.801Z] 17:05:33 INFO - GECKO(5067) | #16: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-09-30T17:05:33.801Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.801Z] 17:05:33 INFO - GECKO(5067) | #17: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:769]
[task 2019-09-30T17:05:33.801Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.943Z] 17:05:33 INFO - GECKO(5067) | #18: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:57]
[task 2019-09-30T17:05:33.943Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.943Z] 17:05:33 INFO - GECKO(5067) | #19: main [browser/app/nsBrowserApp.cpp:272]
[task 2019-09-30T17:05:33.943Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.944Z] 17:05:33 INFO - GECKO(5067) | #20: libc.so.6 + 0x20830
[task 2019-09-30T17:05:33.945Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.945Z] 17:05:33 INFO - GECKO(5067) | #21: _start
[task 2019-09-30T17:05:33.945Z] 17:05:33 INFO -
[task 2019-09-30T17:05:33.947Z] 17:05:33 INFO - GECKO(5067) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x1E0073,name=PBrowser::Msg_UpdateDimensions) Channel error: cannot send/recv
[task 2019-09-30T17:05:33.948Z] 17:05:33 INFO - GECKO(5067) | ###!!! [Parent][RunMessage] Error: Channel error: cannot send/recv
[task 2019-09-30T17:07:00.509Z] 17:07:00 INFO - TEST-PASS | netwerk/cookie/test/browser/browser_sharedWorker.js | SharedWorker is allowed - true == true -
[task 2019-09-30T17:07:00.509Z] 17:07:00 INFO - Leaving test bound
[task 2019-09-30T17:07:00.515Z] 17:07:00 INFO - Entering test bound
[task 2019-09-30T17:07:00.518Z] 17:07:00 INFO - Starting SharedWorker: ({fromBehavior:2, toBehavior:2, fromPermission:1, toPermission:0})
[task 2019-09-30T17:07:00.519Z] 17:07:00 INFO - Console message: [JavaScript Error: "Loading Worker from “https://example.com/browser/netwerk/cookie/test/browser/a.js” was blocked because of a disallowed MIME type (“text/html”)."]
[task 2019-09-30T17:07:00.519Z] 17:07:00 INFO - Console message: [JavaScript Error: "TypeError: process is null" {file: "resource://gre/modules/ProcessSelector.jsm" line: 56}]
[task 2019-09-30T17:07:00.519Z] 17:07:00 INFO - Buffered messages logged at 17:05:34
[task 2019-09-30T17:07:00.520Z] 17:07:00 INFO - Console message: [JavaScript Error: "remote browser crashed while on about:blank
[task 2019-09-30T17:07:00.521Z] 17:07:00 INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 10}]
[task 2019-09-30T17:07:00.522Z] 17:07:00 INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:10:10
[task 2019-09-30T17:07:00.522Z] 17:07:00 INFO - EventListener.handleEvente10s_init@chrome://mochikit/content/mochitest-e10s-utils.js:6:10
[task 2019-09-30T17:07:00.523Z] 17:07:00 INFO - testInit@chrome://mochikit/content/browser-test.js:131:5
[task 2019-09-30T17:07:00.524Z] 17:07:00 INFO - setTimeout handler@chrome://mochikit/content/browser-test.js:41:11
[task 2019-09-30T17:07:00.524Z] 17:07:00 INFO - loadChromeScripts@jar:file:///tmp/tmpBSrDJu.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:21:25
[task 2019-09-30T17:07:00.525Z] 17:07:00 INFO - loadMochitest@jar:file:///tmp/tmpBSrDJu.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:143:20
[task 2019-09-30T17:07:00.525Z] 17:07:00 INFO - @tests/mochitest/runtests.py:1810:5
[task 2019-09-30T17:07:00.526Z] 17:07:00 INFO - @tests/mochitest/runtests.py:1811:8
[task 2019-09-30T17:07:00.526Z] 17:07:00 INFO - evaluate.sandbox/promise<@chrome://marionette/content/evaluate.js:138:10
[task 2019-09-30T17:07:00.526Z] 17:07:00 INFO - evaluate.sandbox@chrome://marionette/content/evaluate.js:114:17
[task 2019-09-30T17:07:00.527Z] 17:07:00 INFO - GeckoDriver.prototype.execute_@chrome://marionette/content/driver.js:1070:28
[task 2019-09-30T17:07:00.527Z] 17:07:00 INFO - async*GeckoDriver.prototype.executeScript@chrome://marionette/content/driver.js:945:30
[task 2019-09-30T17:07:00.528Z] 17:07:00 INFO - despatch@chrome://marionette/content/server.js:305:40
[task 2019-09-30T17:07:00.528Z] 17:07:00 INFO - execute@chrome://marionette/content/server.js:275:16
[task 2019-09-30T17:07:00.528Z] 17:07:00 INFO - onPacket/<@chrome://marionette/content/server.js:248:20
[task 2019-09-30T17:07:00.529Z] 17:07:00 INFO - onPacket@chrome://marionette/content/server.js:249:9
[task 2019-09-30T17:07:00.529Z] 17:07:00 INFO - _onJSONObjectReady/<@chrome://marionette/content/transport.js:501:20
[task 2019-09-30T17:07:00.529Z] 17:07:00 INFO -
[task 2019-09-30T17:07:00.530Z] 17:07:00 INFO - Buffered messages finished
[task 2019-09-30T17:07:00.531Z] 17:07:00 INFO - TEST-UNEXPECTED-FAIL | netwerk/cookie/test/browser/browser_sharedWorker.js | Test timed out -
[task 2019-09-30T17:07:00.532Z] 17:07:00 INFO - GECKO(5067) | MEMORY STAT | vsize 2979MB | residentFast 326MB | heapAllocated 100MB
[task 2019-09-30T17:07:00.533Z] 17:07:00 INFO - TEST-OK | netwerk/cookie/test/browser/browser_sharedWorker.js | took 90022ms
[task 2019-09-30T17:07:00.534Z] 17:07:00 INFO - Not taking screenshot here: see the one that was previously logged
[task 2019-09-30T17:07:00.534Z] 17:07:00 INFO - TEST-UNEXPECTED-FAIL | netwerk/cookie/test/browser/browser_sharedWorker.js | Found a tab after previous test timed out: about:blank -
[task 2019-09-30T17:07:00.535Z] 17:07:00 INFO - GECKO(5067) | ++DOCSHELL 0x7f0cb83b2800 == 1 [pid = 6984] [id = {534e9722-6113-47fb-8571-68edc15d0c76}]
[task 2019-09-30T17:07:00.536Z] 17:07:00 INFO - checking window state
[task 2019-09-30T17:07:00.536Z] 17:07:00 INFO - GECKO(5067) | ++DOMWINDOW == 1 (0x7f0cb821ff20) [pid = 6984] [serial = 1] [outer = (nil)]
[task 2019-09-30T17:07:00.537Z] 17:07:00 INFO - GECKO(5067) | ++DOMWINDOW == 2 (0x7f0cb8332c00) [pid = 6984] [serial = 2] [outer = 0x7f0cb821ff20]
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 10•6 years ago
|
||
There are 92 total failures in the last 7 days and 144 total failures in the last 30.
All failures are on fission and happen on linux64 debug,
Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=275829060&repo=autoland&lineNumber=22132
[task 2019-11-12T16:57:10.607Z] 16:57:10 INFO - TEST-START | netwerk/cookie/test/browser/browser_sharedWorker.js
[task 2019-11-12T16:57:10.684Z] 16:57:10 INFO - GECKO(7973) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpU9ctbs.mozrunner/runtests_leaks_tab_pid9965.log
[task 2019-11-12T16:57:10.700Z] 16:57:10 INFO - GECKO(7973) | [Child 9965, Main Thread] WARNING: No CID found when attempting to map contract ID: file /builds/worker/workspace/build/src/xpcom/components/nsComponentManager.cpp, line 729
[task 2019-11-12T16:57:10.735Z] 16:57:10 INFO - GECKO(7973) | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-11-12T16:57:10.897Z] 16:57:10 INFO - GECKO(7973) | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-11-12T16:57:10.920Z] 16:57:10 INFO - GECKO(7973) | [Child 9954, Main Thread] WARNING: could not set real-time limit at process startup: file /builds/worker/workspace/build/src/dom/ipc/ContentChild.cpp, line 1799
[task 2019-11-12T16:57:10.936Z] 16:57:10 INFO - GECKO(7973) | ++DOCSHELL 0x7fade140b800 == 1 [pid = 9954] [id = {684107e1-6f4f-4e86-98f6-6205d132e9f4}]
[task 2019-11-12T16:57:14.243Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, IPDL Background] WARNING: The service must exist if we want to close an existing MessagePort.: file /builds/worker/workspace/build/src/dom/messagechannel/MessagePortParent.cpp, line 154
[task 2019-11-12T16:57:14.283Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, Main Thread] WARNING: Suboptimal indexes for the SQL statement 0x7f5efd8b01b0 (http://mzl.la/1FuID0j).: file /builds/worker/workspace/build/src/storage/mozStoragePrivateHelpers.cpp, line 108
[task 2019-11-12T16:57:14.311Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x804B001D: file /builds/worker/workspace/build/src/netwerk/protocol/http/nsHttpChannel.cpp, line 1792
[task 2019-11-12T16:57:14.419Z] 16:57:14 INFO - GECKO(7973) | JavaScript error: resource://gre/modules/ProcessSelector.jsm, line 56: TypeError: process is null
[task 2019-11-12T16:57:14.419Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, Main Thread] WARNING: nsIContentProcessProvider failed to return a process: file /builds/worker/workspace/build/src/dom/ipc/ContentParent.cpp, line 901
[task 2019-11-12T16:57:14.422Z] 16:57:14 INFO - GECKO(7973) | Assertion failure: !IsShuttingDown(), at /builds/worker/workspace/build/src/dom/ipc/ContentChild.cpp:1876
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #01: mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:59f60bf949d553fd8887740bf136e8047d39982ec7dea37940b4ba2b8c784de28c35dce97966d00fd4411205ed7dae3e85fddda4a5b75bc11f78f507474d7cc0/ipc/ipdl/PContentChild.cpp::8220]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #02: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [ipc/glue/MessageChannel.cpp:2209]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #03: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [ipc/glue/MessageChannel.cpp:2133]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #04: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:0]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #05: mozilla::ipc::MessageChannel::MessageTask::Run() [ipc/glue/MessageChannel.cpp:2005]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #06: mozilla::SchedulerGroup::Runnable::Run() [xpcom/threads/SchedulerGroup.cpp:295]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #07: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1250]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #08: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:486]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO - GECKO(7973) | #09: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:88]
[task 2019-11-12T16:57:14.427Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.428Z] 16:57:14 INFO - GECKO(7973) | #10: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-11-12T16:57:14.428Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.429Z] 16:57:14 INFO - GECKO(7973) | #11: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:139]
[task 2019-11-12T16:57:14.429Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.430Z] 16:57:14 INFO - GECKO(7973) | #12: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:934]
[task 2019-11-12T16:57:14.431Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.433Z] 16:57:14 INFO - GECKO(7973) | #13: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:238]
[task 2019-11-12T16:57:14.434Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.438Z] 16:57:14 INFO - GECKO(7973) | #14: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-11-12T16:57:14.439Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.439Z] 16:57:14 INFO - GECKO(7973) | #15: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:769]
[task 2019-11-12T16:57:14.440Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.440Z] 16:57:14 INFO - GECKO(7973) | #16: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:57]
[task 2019-11-12T16:57:14.441Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.441Z] 16:57:14 INFO - GECKO(7973) | #17: main [browser/app/nsBrowserApp.cpp:272]
[task 2019-11-12T16:57:14.441Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.442Z] 16:57:14 INFO - GECKO(7973) | #18: libc.so.6 + 0x20830
[task 2019-11-12T16:57:14.442Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.442Z] 16:57:14 INFO - GECKO(7973) | #19: _start
[task 2019-11-12T16:57:14.442Z] 16:57:14 INFO -
[task 2019-11-12T16:57:14.507Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, Main Thread] WARNING: IPC message discarded: actor cannot send: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 481
[task 2019-11-12T16:57:14.508Z] 16:57:14 INFO - GECKO(7973) | [Parent 7973, Main Thread] WARNING: IPC message discarded: actor cannot send: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 481
Jim can you please assign someone to take a look?
| Assignee | ||
Updated•6 years ago
|
Comment 11•6 years ago
|
||
Andrew, can you look into this since it looks to be IPC related?
| Assignee | ||
Comment 12•6 years ago
|
||
Well, if I knew how to fix this, I would have fixed it instead of needinfoing you. :) I'll see if I can figure out what this code is. The assertion was added in bug 1331685. Bug 1331685 comment 8 says "We should just assert !IsShuttingDown here", but there's no explanation. I think we crash if a constructor fails, so returning instead of asserting likely won't help anything. Bug 1576714 landed around when this showed up, but the periods where it was backed out don't seem to correspond to when this error was seen.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 13•6 years ago
|
||
I was able to reproduce this locally with
./mach mochitest --verify --enable-fission --headless netwerk/cookie/test/browser/browser_sharedWorker.js
Comment 14•6 years ago
|
||
It looks like we're crashing because we ran PContentParent::SendConstructBrowser after PContentParent::SendShutdown.
Given the error message "[Parent 7973, Main Thread] WARNING: nsIContentProcessProvider failed to return a process: file /builds/worker/workspace/build/src/dom/ipc/ContentParent.cpp, line 901", it seems that we must have obtained our ContentParent here - https://searchfox.org/mozilla-central/rev/6566d92dd46417a2f57e75c515135ebe84c9cef5/dom/ipc/ContentParent.cpp#900
It looks like the cpp->ProvideProcess path (which we're not taking in this instance) checks for shut down parents, since ContentParent::ShutDownProcess call ProcessDied on the scriptable helper (and then clears it).
I can't see anything stopping us from picking a ContentParent that is mid-shutdown from the random selection path, since it appears that we don't remove them from the pool until ActorDestroy (which is when we finish shutdown, not start it).
I think we should be checking for !p->mShutdownPending in ContentParent::MinTabSelect.
| Assignee | ||
Comment 15•6 years ago
|
||
Yeah, so the actual error in the JSM is a line earlier and is this:
JavaScript error: resource://gre/modules/ProcessSelector.jsm, line 56: TypeError: process is null
At least part of the problem is that we're not null checking cp->mScriptableHelper when we push onto infos. Fixing that at least let me pass a verify run. But yeah, it makes sense that the actual underlying problem is that this fallback case is broken.
| Assignee | ||
Comment 16•6 years ago
|
||
ContentParent::GetNewOrUsedBrowserProcess failed to handle content
parents that were in the middle of being shut down in two ways.
First, it would end up trying to pass them in to the provide process
method, which resulted in null entries the infos array, which caused
the JS implementation to throw an error.
Second, when the nsIContentProcessProvider implementation threw an
error, we'd fall back to MinTabSelect(), but that didn't exclude
content parents that were being shutdown.
| Assignee | ||
Comment 17•6 years ago
|
||
Thanks for the help, Matt. My patch contains fixes for both issues. Either one of them fixes the assertion. I looked through GetNewOrUsedBrowserProcess() and it looks like the other cases properly deal with content parents where shutdown is pending.
Comment 18•6 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 20•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 21•6 years ago
|
||
Retroactively moving fixed bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to an appropriate Fission Milestone.
This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:
0ee3c76a-bc79-4eb2-8d12-05dc0b68e732
| Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
| Assignee | ||
Comment 23•6 years ago
|
||
This is a bug with non-Fission e10s, too, but we just don't create as many processes, so it doesn't show up as much. I don't know if it is worth backporting or not. Probably not?
| Assignee | ||
Comment 24•6 years ago
|
||
(Probably not, given that this bug has been present for the entirety of the time we've been shipping e10s and nobody has noticed it before.)
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Description
•