Bug 1585114 - Don't return shutdown pending processes from ContentParent::GetNewOrUsedBrowserProcess. r=mattwoodrow

ContentParent::GetNewOrUsedBrowserProcess can end up returning a
content parent that is in the middle of shutting down if the
nsIContentProcessProvider implementation threw an error because we'd
fall back to MinTabSelect(), which didn't exclude content parents that
were being shutdown. This patch fixes that.

The reason that the existing implementations of
nsIContentProcessProviders fail is that the array that is passed to
them can contain null entries which the code does not expect. I'll fix
that in a separate bug.

Differential Revision: https://phabricator.services.mozilla.com/D52774